--- a/templates/index.html
+++ b/templates/index.html
@@ -66,7 +66,7 @@
 
         <!-- Text Content -->
         <div class="welcome-content">
-          <h1><strong>Welcome, Adventurer!</strong></h1>
+          <h1><strong>Welcome, Adventurer!</strong></h1><br>
           <p>
             Step into the tavern and explore new adventures with fellow travellers. Feel free to rest, take stock of your party and prepare for your next quest over a tankard or two of my finest ale.<br>
             <br>Select the <strong>Characters</strong> option from the menu to create or manage your rosters.<br>
